<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".presentation.transformers.TransformerActivity">

    <include
        android:id="@+id/llToolbarMain"
        layout="@layout/layout_toolbar_main" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llToolbarMain">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_16">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/tvStyleRegular"
                android:text="@string/select_team" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gray_stroke"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rbA"
                    style="@style/tvStyleRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorPrimaryDark"
                    android:text="@string/team_autobot" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rbD"
                    style="@style/tvStyleRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorPrimaryDark"
                    android:text="@string/team_decepticon" />

            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilName"
                style="@style/tilStyle"
                android:layout_marginTop="@dimen/margin_16"
                android:hint="@string/name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtName"
                    style="@style/edtStyle"
                    android:inputType="textCapWords"
                    android:lines="1"
                    android:maxLength="@integer/max_length" />

            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatTextView
                style="@style/tvStyleRegular"
                android:layout_marginTop="@dimen/margin_16"
                android:text="@string/strength_t" />

            <com.warkiz.widget.IndicatorSeekBar
                android:id="@+id/indicatorStrength"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/margin_8"
                app:isb_indicator_color="@color/colorPrimaryDark"
                app:isb_max="10"
                app:isb_min="1"
                app:isb_only_thumb_draggable="false"
                app:isb_progress="1"
                app:isb_seek_smoothly="true"
                app:isb_show_indicator="rounded_rectangle"
                app:isb_show_tick_marks_type="oval"
                app:isb_show_tick_texts="true"
                app:isb_tick_texts_color="@color/colorTextPrimary"
                app:isb_ticks_count="10"
                app:isb_track_background_size="2dp"
                app:isb_track_progress_color="@color/colorBlue" />


            <androidx.appcompat.widget.AppCompatTextView
                style="@style/tvStyleRegular"
                android:layout_marginTop="@dimen/margin_16"
                android:text="@string/intelligence_t" />

            <com.warkiz.widget.IndicatorSeekBar
                android:id="@+id/indicatorIntelligence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/margin_8"
                app:isb_indicator_color="@color/colorPrimaryDark"
                app:isb_max="10"
                app:isb_min="1"
                app:isb_only_thumb_draggable="false"
                app:isb_progress="1"
                app:isb_seek_smoothly="true"
                app:isb_show_indicator="rounded_rectangle"
                app:isb_show_tick_marks_type="oval"
                app:isb_show_tick_texts="true"
                app:isb_tick_texts_color="@color/colorTextPrimary"
                app:isb_ticks_count="10"
                app:isb_track_background_size="2dp"
                app:isb_track_progress_color="@color/colorBlue" />


            <androidx.appcompat.widget.AppCompatTextView
                style="@style/tvStyleRegular"
                android:layout_marginTop="@dimen/margin_16"
                android:text="@string/speed_t" />

            <com.warkiz.widget.IndicatorSeekBar
                android:id="@+id/indicatorSpeed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/margin_8"
                app:isb_indicator_color="@color/colorPrimaryDark"
                app:isb_max="10"
                app:isb_min="1"
                app:isb_only_thumb_draggable="false"
                app:isb_progress="1"
                app:isb_seek_smoothly="true"
                app:isb_show_indicator="rounded_rectangle"
                app:isb_show_tick_marks_type="oval"
                app:isb_show_tick_texts="true"
                app:isb_tick_texts_color="@color/colorTextPrimary"
                app:isb_ticks_count="8"
                app:isb_track_background_size="2dp"
                app:isb_track_progress_color="@color/colorBlue" />


            <androidx.appcompat.widget.AppCompatTextView
                style="@style/tvStyleRegular"
                android:layout_marginTop="@dimen/margin_16"
                android:text="@string/endurance_t" />

            <com.warkiz.widget.IndicatorSeekBar
                android:id="@+id/indicatorEndurance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/margin_8"
                app:isb_indicator_color="@color/colorPrimaryDark"
                app:isb_max="10"
                app:isb_min="1"
                app:isb_only_thumb_draggable="false"
                app:isb_progress="1"
                app:isb_seek_smoothly="true"
                app:isb_show_indicator="rounded_rectangle"
                app:isb_show_tick_marks_type="oval"
                app:isb_show_tick_texts="true"
                app:isb_tick_texts_color="@color/colorTextPrimary"
                app:isb_ticks_count="10"
                app:isb_track_background_size="2dp"
                app:isb_track_progress_color="@color/colorBlue" />


            <androidx.appcompat.widget.AppCompatTextView
                style="@style/tvStyleRegular"
                android:layout_marginTop="@dimen/margin_16"
                android:text="@string/rank_t" />

            <com.warkiz.widget.IndicatorSeekBar
                android:id="@+id/indicatorRank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/margin_8"
                app:isb_indicator_color="@color/colorPrimaryDark"
                app:isb_max="10"
                app:isb_min="1"
                app:isb_only_thumb_draggable="false"
                app:isb_progress="1"
                app:isb_seek_smoothly="true"
                app:isb_show_indicator="rounded_rectangle"
                app:isb_show_tick_marks_type="oval"
                app:isb_show_tick_texts="true"
                app:isb_tick_texts_color="@color/colorTextPrimary"
                app:isb_ticks_count="10"
                app:isb_track_background_size="2dp"
                app:isb_track_progress_color="@color/colorBlue" />


            <androidx.appcompat.widget.AppCompatTextView
                style="@style/tvStyleRegular"
                android:layout_marginTop="@dimen/margin_16"
                android:text="@string/courage_t" />

            <com.warkiz.widget.IndicatorSeekBar
                android:id="@+id/indicatorCourage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/margin_8"
                app:isb_indicator_color="@color/colorPrimaryDark"
                app:isb_max="10"
                app:isb_min="1"
                app:isb_only_thumb_draggable="false"
                app:isb_progress="1"
                app:isb_seek_smoothly="true"
                app:isb_show_indicator="rounded_rectangle"
                app:isb_show_tick_marks_type="oval"
                app:isb_show_tick_texts="true"
                app:isb_tick_texts_color="@color/colorTextPrimary"
                app:isb_ticks_count="10"
                app:isb_track_background_size="2dp"
                app:isb_track_progress_color="@color/colorBlue" />


            <androidx.appcompat.widget.AppCompatTextView
                style="@style/tvStyleRegular"
                android:layout_marginTop="@dimen/margin_16"
                android:text="@string/firepower_t" />

            <com.warkiz.widget.IndicatorSeekBar
                android:id="@+id/indicatorFirePower"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/margin_8"
                app:isb_indicator_color="@color/colorPrimaryDark"
                app:isb_max="10"
                app:isb_min="1"
                app:isb_only_thumb_draggable="false"
                app:isb_progress="1"
                app:isb_seek_smoothly="true"
                app:isb_show_indicator="rounded_rectangle"
                app:isb_show_tick_marks_type="oval"
                app:isb_show_tick_texts="true"
                app:isb_tick_texts_color="@color/colorTextPrimary"
                app:isb_ticks_count="8"
                app:isb_track_background_size="2dp"
                app:isb_track_progress_color="@color/colorBlue" />


            <androidx.appcompat.widget.AppCompatTextView
                style="@style/tvStyleRegular"
                android:layout_marginTop="@dimen/margin_16"
                android:text="@string/skill_t" />

            <com.warkiz.widget.IndicatorSeekBar
                android:id="@+id/indicatorSkill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/margin_8"
                app:isb_indicator_color="@color/colorPrimaryDark"
                app:isb_max="10"
                app:isb_min="1"
                app:isb_only_thumb_draggable="false"
                app:isb_progress="1"
                app:isb_seek_smoothly="true"
                app:isb_show_indicator="rounded_rectangle"
                app:isb_show_tick_marks_type="oval"
                app:isb_show_tick_texts="true"
                app:isb_tick_texts_color="@color/colorTextPrimary"
                app:isb_ticks_count="10"
                app:isb_track_background_size="2dp"
                app:isb_track_progress_color="@color/colorBlue" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSave"
                style="@style/btnStyle"
                android:layout_marginTop="@dimen/margin_16"
                android:text="@string/save"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>